--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" />-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+      .container {
+        max-width: 600px;
+      }
+    </style>
+
     <title>React App</title>
   </head>
   <body>
